Implementar a Lógica do Reprodutor de Audiobook em JavaScript
Este commit incorpora o código JavaScript que conduz a lógica do reprodutor de audiobook na página index.html.

- Introduz funcionalidades de controle, permitindo pausar, reproduzir, avançar e retroceder nos capítulos.
- Integra uma barra de progresso dinâmica que reflete a posição atual durante a reprodução do áudio.
- Atualiza o arquivo index.html para incluir e aplicar o novo script JavaScript.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             </div>
         </article>
     </main>
+    <script defer src="./js/script.js"></script>
+    <!-- Carrega o JavaScript por último, após o processamento do HTML e CSS, evitando lentidão ou falha na renderização. -->
 </body>
 
 </html>
